--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,12 @@ cython_debug/
 
 # mine
 app/uploads/
+#venv
+Scripts
+share
+include
+
+#static/uploads
+uploads
+#model not included
+best_model_101class.h5
